--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ authors = []
 edition = "2018"
 
 [dependencies]
-amethyst = "0.11.0"
+amethyst = "0.15.0"
 
 [features]
 vulkan = ["amethyst/vulkan"]
+# empty = ["amethyst/empty"]
+# metal = ["amethyst/metal"]
