--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 amethyst = "0.15.0"
 serde = { version = "1.0.104", features = ["derive"] }
 winit = { version = "0.19", features = ["serde", "icon_loading"] }
+nalgebra = { version = "0.19.0", features = ["serde-serialize", "mint"] }
 
 [features]
 vulkan = ["amethyst/vulkan"]
